parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> funcs
Rule 2     prog -> externs funcs
Rule 3     externs -> extern
Rule 4     externs -> extern externs
Rule 5     funcs -> func
Rule 6     funcs -> func funcs
Rule 7     extern -> EXTERN TYPE GLOBID LParen RParen Semicolon
Rule 8     extern -> EXTERN TYPE GLOBID LParen tdecls RParen Semicolon
Rule 9     func -> DEF TYPE GLOBID LParen RParen blk
Rule 10    func -> DEF TYPE GLOBID LParen vdecls RParen blk
Rule 11    blk -> LBracket stmts RBracket
Rule 12    blk -> LBracket RBracket
Rule 13    stmts -> stmt
Rule 14    stmts -> stmt stmts
Rule 15    stmt -> blk
Rule 16    stmt -> Return Semicolon
Rule 17    stmt -> Return exp Semicolon
Rule 18    stmt -> vdecl Equal exp Semicolon
Rule 19    stmt -> exp Semicolon
Rule 20    stmt -> While LParen exp RParen stmt
Rule 21    stmt -> If LParen exp RParen stmt
Rule 22    stmt -> If LParen exp RParen stmt Else stmt
Rule 23    stmt -> Print exp Semicolon
Rule 24    stmt -> Array LSquare lit RSquare PLUS lit Semicolon
Rule 25    stmt -> Array LSquare GLOBID RSquare PLUS lit Semicolon
Rule 26    stmt -> Array LSquare lit RSquare Minus lit Semicolon
Rule 27    stmt -> Array LSquare GLOBID RSquare Minus lit Semicolon
Rule 28    stmt -> GLOBID Equal Vector Semicolon
Rule 29    Vector -> Array LSquare RSquare
Rule 30    Vector -> Array LSquare lit RSquare
Rule 31    Vector -> Array LSquare GLOBID RSquare
Rule 32    exps -> exp
Rule 33    exps -> exp COMMA exps
Rule 34    exp -> LParen exp RParen
Rule 35    exp -> lit
Rule 36    exp -> binop
Rule 37    exp -> GLOBID
Rule 38    exp -> GLOBID expWrapper
Rule 39    expWrapper -> LParen RParen
Rule 40    expWrapper -> LParen exps RParen
Rule 41    binop -> exp Multiply exp
Rule 42    binop -> exp PLUS exp
Rule 43    binop -> exp Divide exp
Rule 44    binop -> exp Minus exp
Rule 45    binop -> GLOBID Equal exp
Rule 46    binop -> exp Equality exp
Rule 47    binop -> exp Different exp
Rule 48    vdecls -> vdecl COMMA vdecls
Rule 49    vdecls -> vdecl
Rule 50    vdecl -> TYPE GLOBID
Rule 51    tdecls -> TYPE
Rule 52    tdecls -> TYPE COMMA tdecls
Rule 53    TYPE -> int
Rule 54    TYPE -> void
Rule 55    TYPE -> ref TYPE
Rule 56    TYPE -> noalias ref TYPE

Terminals, with rules where they appear

Array                : 24 25 26 27 29 30 31
COMMA                : 33 48 52
DEF                  : 9 10
Different            : 47
Divide               : 43
EXTERN               : 7 8
Else                 : 22
Equal                : 18 28 45
Equality             : 46
GLOBID               : 7 8 9 10 25 27 28 31 37 38 45 50
If                   : 21 22
LBracket             : 11 12
LParen               : 7 8 9 10 20 21 22 34 39 40
LSquare              : 24 25 26 27 29 30 31
Minus                : 26 27 44
Multiply             : 41
PLUS                 : 24 25 42
Print                : 23
RBracket             : 11 12
RParen               : 7 8 9 10 20 21 22 34 39 40
RSquare              : 24 25 26 27 29 30 31
Return               : 16 17
Semicolon            : 7 8 16 17 18 19 23 24 25 26 27 28
While                : 20
error                : 
int                  : 53
lit                  : 24 24 25 26 26 27 30 35
noalias              : 56
ref                  : 55 56
void                 : 54

Nonterminals, with rules where they appear

TYPE                 : 7 8 9 10 50 51 52 55 56
Vector               : 28
binop                : 36
blk                  : 9 10 15
exp                  : 17 18 19 20 21 22 23 32 33 34 41 41 42 42 43 43 44 44 45 46 46 47 47
expWrapper           : 38
exps                 : 33 40
extern               : 3 4
externs              : 2 4
func                 : 5 6
funcs                : 1 2 6
prog                 : 0
stmt                 : 13 14 20 21 22 22
stmts                : 11 14
tdecls               : 8 52
vdecl                : 18 48 49
vdecls               : 10 48

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . funcs
    (2) prog -> . externs funcs
    (5) funcs -> . func
    (6) funcs -> . func funcs
    (3) externs -> . extern
    (4) externs -> . extern externs
    (9) func -> . DEF TYPE GLOBID LParen RParen blk
    (10) func -> . DEF TYPE GLOBID LParen vdecls RParen blk
    (7) extern -> . EXTERN TYPE GLOBID LParen RParen Semicolon
    (8) extern -> . EXTERN TYPE GLOBID LParen tdecls RParen Semicolon

    DEF             shift and go to state 6
    EXTERN          shift and go to state 7

    prog                           shift and go to state 1
    funcs                          shift and go to state 2
    externs                        shift and go to state 3
    func                           shift and go to state 4
    extern                         shift and go to state 5

state 1

    (0) S' -> prog .



state 2

    (1) prog -> funcs .

    $end            reduce using rule 1 (prog -> funcs .)


state 3

    (2) prog -> externs . funcs
    (5) funcs -> . func
    (6) funcs -> . func funcs
    (9) func -> . DEF TYPE GLOBID LParen RParen blk
    (10) func -> . DEF TYPE GLOBID LParen vdecls RParen blk

    DEF             shift and go to state 6

    funcs                          shift and go to state 8
    func                           shift and go to state 4

state 4

    (5) funcs -> func .
    (6) funcs -> func . funcs
    (5) funcs -> . func
    (6) funcs -> . func funcs
    (9) func -> . DEF TYPE GLOBID LParen RParen blk
    (10) func -> . DEF TYPE GLOBID LParen vdecls RParen blk

    $end            reduce using rule 5 (funcs -> func .)
    DEF             shift and go to state 6

    func                           shift and go to state 4
    funcs                          shift and go to state 9

state 5

    (3) externs -> extern .
    (4) externs -> extern . externs
    (3) externs -> . extern
    (4) externs -> . extern externs
    (7) extern -> . EXTERN TYPE GLOBID LParen RParen Semicolon
    (8) extern -> . EXTERN TYPE GLOBID LParen tdecls RParen Semicolon

    DEF             reduce using rule 3 (externs -> extern .)
    EXTERN          shift and go to state 7

    extern                         shift and go to state 5
    externs                        shift and go to state 10

state 6

    (9) func -> DEF . TYPE GLOBID LParen RParen blk
    (10) func -> DEF . TYPE GLOBID LParen vdecls RParen blk
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE

    int             shift and go to state 12
    void            shift and go to state 13
    ref             shift and go to state 14
    noalias         shift and go to state 15

    TYPE                           shift and go to state 11

state 7

    (7) extern -> EXTERN . TYPE GLOBID LParen RParen Semicolon
    (8) extern -> EXTERN . TYPE GLOBID LParen tdecls RParen Semicolon
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE

    int             shift and go to state 12
    void            shift and go to state 13
    ref             shift and go to state 14
    noalias         shift and go to state 15

    TYPE                           shift and go to state 16

state 8

    (2) prog -> externs funcs .

    $end            reduce using rule 2 (prog -> externs funcs .)


state 9

    (6) funcs -> func funcs .

    $end            reduce using rule 6 (funcs -> func funcs .)


state 10

    (4) externs -> extern externs .

    DEF             reduce using rule 4 (externs -> extern externs .)


state 11

    (9) func -> DEF TYPE . GLOBID LParen RParen blk
    (10) func -> DEF TYPE . GLOBID LParen vdecls RParen blk

    GLOBID          shift and go to state 17


state 12

    (53) TYPE -> int .

    GLOBID          reduce using rule 53 (TYPE -> int .)
    COMMA           reduce using rule 53 (TYPE -> int .)
    RParen          reduce using rule 53 (TYPE -> int .)


state 13

    (54) TYPE -> void .

    GLOBID          reduce using rule 54 (TYPE -> void .)
    COMMA           reduce using rule 54 (TYPE -> void .)
    RParen          reduce using rule 54 (TYPE -> void .)


state 14

    (55) TYPE -> ref . TYPE
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE

    int             shift and go to state 12
    void            shift and go to state 13
    ref             shift and go to state 14
    noalias         shift and go to state 15

    TYPE                           shift and go to state 18

state 15

    (56) TYPE -> noalias . ref TYPE

    ref             shift and go to state 19


state 16

    (7) extern -> EXTERN TYPE . GLOBID LParen RParen Semicolon
    (8) extern -> EXTERN TYPE . GLOBID LParen tdecls RParen Semicolon

    GLOBID          shift and go to state 20


state 17

    (9) func -> DEF TYPE GLOBID . LParen RParen blk
    (10) func -> DEF TYPE GLOBID . LParen vdecls RParen blk

    LParen          shift and go to state 21


state 18

    (55) TYPE -> ref TYPE .

    GLOBID          reduce using rule 55 (TYPE -> ref TYPE .)
    COMMA           reduce using rule 55 (TYPE -> ref TYPE .)
    RParen          reduce using rule 55 (TYPE -> ref TYPE .)


state 19

    (56) TYPE -> noalias ref . TYPE
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE

    int             shift and go to state 12
    void            shift and go to state 13
    ref             shift and go to state 14
    noalias         shift and go to state 15

    TYPE                           shift and go to state 22

state 20

    (7) extern -> EXTERN TYPE GLOBID . LParen RParen Semicolon
    (8) extern -> EXTERN TYPE GLOBID . LParen tdecls RParen Semicolon

    LParen          shift and go to state 23


state 21

    (9) func -> DEF TYPE GLOBID LParen . RParen blk
    (10) func -> DEF TYPE GLOBID LParen . vdecls RParen blk
    (48) vdecls -> . vdecl COMMA vdecls
    (49) vdecls -> . vdecl
    (50) vdecl -> . TYPE GLOBID
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE

    RParen          shift and go to state 25
    int             shift and go to state 12
    void            shift and go to state 13
    ref             shift and go to state 14
    noalias         shift and go to state 15

    TYPE                           shift and go to state 24
    vdecls                         shift and go to state 26
    vdecl                          shift and go to state 27

state 22

    (56) TYPE -> noalias ref TYPE .

    GLOBID          reduce using rule 56 (TYPE -> noalias ref TYPE .)
    COMMA           reduce using rule 56 (TYPE -> noalias ref TYPE .)
    RParen          reduce using rule 56 (TYPE -> noalias ref TYPE .)


state 23

    (7) extern -> EXTERN TYPE GLOBID LParen . RParen Semicolon
    (8) extern -> EXTERN TYPE GLOBID LParen . tdecls RParen Semicolon
    (51) tdecls -> . TYPE
    (52) tdecls -> . TYPE COMMA tdecls
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE

    RParen          shift and go to state 29
    int             shift and go to state 12
    void            shift and go to state 13
    ref             shift and go to state 14
    noalias         shift and go to state 15

    TYPE                           shift and go to state 28
    tdecls                         shift and go to state 30

state 24

    (50) vdecl -> TYPE . GLOBID

    GLOBID          shift and go to state 31


state 25

    (9) func -> DEF TYPE GLOBID LParen RParen . blk
    (11) blk -> . LBracket stmts RBracket
    (12) blk -> . LBracket RBracket

    LBracket        shift and go to state 33

    blk                            shift and go to state 32

state 26

    (10) func -> DEF TYPE GLOBID LParen vdecls . RParen blk

    RParen          shift and go to state 34


state 27

    (48) vdecls -> vdecl . COMMA vdecls
    (49) vdecls -> vdecl .

    COMMA           shift and go to state 35
    RParen          reduce using rule 49 (vdecls -> vdecl .)


state 28

    (51) tdecls -> TYPE .
    (52) tdecls -> TYPE . COMMA tdecls

    RParen          reduce using rule 51 (tdecls -> TYPE .)
    COMMA           shift and go to state 36


state 29

    (7) extern -> EXTERN TYPE GLOBID LParen RParen . Semicolon

    Semicolon       shift and go to state 37


state 30

    (8) extern -> EXTERN TYPE GLOBID LParen tdecls . RParen Semicolon

    RParen          shift and go to state 38


state 31

    (50) vdecl -> TYPE GLOBID .

    COMMA           reduce using rule 50 (vdecl -> TYPE GLOBID .)
    RParen          reduce using rule 50 (vdecl -> TYPE GLOBID .)
    Equal           reduce using rule 50 (vdecl -> TYPE GLOBID .)


state 32

    (9) func -> DEF TYPE GLOBID LParen RParen blk .

    DEF             reduce using rule 9 (func -> DEF TYPE GLOBID LParen RParen blk .)
    $end            reduce using rule 9 (func -> DEF TYPE GLOBID LParen RParen blk .)


state 33

    (11) blk -> LBracket . stmts RBracket
    (12) blk -> LBracket . RBracket
    (13) stmts -> . stmt
    (14) stmts -> . stmt stmts
    (15) stmt -> . blk
    (16) stmt -> . Return Semicolon
    (17) stmt -> . Return exp Semicolon
    (18) stmt -> . vdecl Equal exp Semicolon
    (19) stmt -> . exp Semicolon
    (20) stmt -> . While LParen exp RParen stmt
    (21) stmt -> . If LParen exp RParen stmt
    (22) stmt -> . If LParen exp RParen stmt Else stmt
    (23) stmt -> . Print exp Semicolon
    (24) stmt -> . Array LSquare lit RSquare PLUS lit Semicolon
    (25) stmt -> . Array LSquare GLOBID RSquare PLUS lit Semicolon
    (26) stmt -> . Array LSquare lit RSquare Minus lit Semicolon
    (27) stmt -> . Array LSquare GLOBID RSquare Minus lit Semicolon
    (28) stmt -> . GLOBID Equal Vector Semicolon
    (11) blk -> . LBracket stmts RBracket
    (12) blk -> . LBracket RBracket
    (50) vdecl -> . TYPE GLOBID
    (34) exp -> . LParen exp RParen
    (35) exp -> . lit
    (36) exp -> . binop
    (37) exp -> . GLOBID
    (38) exp -> . GLOBID expWrapper
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE
    (41) binop -> . exp Multiply exp
    (42) binop -> . exp PLUS exp
    (43) binop -> . exp Divide exp
    (44) binop -> . exp Minus exp
    (45) binop -> . GLOBID Equal exp
    (46) binop -> . exp Equality exp
    (47) binop -> . exp Different exp

    RBracket        shift and go to state 40
    Return          shift and go to state 43
    While           shift and go to state 46
    If              shift and go to state 48
    Print           shift and go to state 49
    Array           shift and go to state 50
    GLOBID          shift and go to state 52
    LBracket        shift and go to state 33
    LParen          shift and go to state 47
    lit             shift and go to state 51
    int             shift and go to state 12
    void            shift and go to state 13
    ref             shift and go to state 14
    noalias         shift and go to state 15

    stmts                          shift and go to state 39
    stmt                           shift and go to state 41
    blk                            shift and go to state 42
    exp                            shift and go to state 44
    vdecl                          shift and go to state 45
    TYPE                           shift and go to state 24
    binop                          shift and go to state 53

state 34

    (10) func -> DEF TYPE GLOBID LParen vdecls RParen . blk
    (11) blk -> . LBracket stmts RBracket
    (12) blk -> . LBracket RBracket

    LBracket        shift and go to state 33

    blk                            shift and go to state 54

state 35

    (48) vdecls -> vdecl COMMA . vdecls
    (48) vdecls -> . vdecl COMMA vdecls
    (49) vdecls -> . vdecl
    (50) vdecl -> . TYPE GLOBID
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE

    int             shift and go to state 12
    void            shift and go to state 13
    ref             shift and go to state 14
    noalias         shift and go to state 15

    vdecl                          shift and go to state 27
    vdecls                         shift and go to state 55
    TYPE                           shift and go to state 24

state 36

    (52) tdecls -> TYPE COMMA . tdecls
    (51) tdecls -> . TYPE
    (52) tdecls -> . TYPE COMMA tdecls
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE

    int             shift and go to state 12
    void            shift and go to state 13
    ref             shift and go to state 14
    noalias         shift and go to state 15

    TYPE                           shift and go to state 28
    tdecls                         shift and go to state 56

state 37

    (7) extern -> EXTERN TYPE GLOBID LParen RParen Semicolon .

    EXTERN          reduce using rule 7 (extern -> EXTERN TYPE GLOBID LParen RParen Semicolon .)
    DEF             reduce using rule 7 (extern -> EXTERN TYPE GLOBID LParen RParen Semicolon .)


state 38

    (8) extern -> EXTERN TYPE GLOBID LParen tdecls RParen . Semicolon

    Semicolon       shift and go to state 57


state 39

    (11) blk -> LBracket stmts . RBracket

    RBracket        shift and go to state 58


state 40

    (12) blk -> LBracket RBracket .

    DEF             reduce using rule 12 (blk -> LBracket RBracket .)
    $end            reduce using rule 12 (blk -> LBracket RBracket .)
    Return          reduce using rule 12 (blk -> LBracket RBracket .)
    While           reduce using rule 12 (blk -> LBracket RBracket .)
    If              reduce using rule 12 (blk -> LBracket RBracket .)
    Print           reduce using rule 12 (blk -> LBracket RBracket .)
    Array           reduce using rule 12 (blk -> LBracket RBracket .)
    GLOBID          reduce using rule 12 (blk -> LBracket RBracket .)
    LBracket        reduce using rule 12 (blk -> LBracket RBracket .)
    LParen          reduce using rule 12 (blk -> LBracket RBracket .)
    lit             reduce using rule 12 (blk -> LBracket RBracket .)
    int             reduce using rule 12 (blk -> LBracket RBracket .)
    void            reduce using rule 12 (blk -> LBracket RBracket .)
    ref             reduce using rule 12 (blk -> LBracket RBracket .)
    noalias         reduce using rule 12 (blk -> LBracket RBracket .)
    RBracket        reduce using rule 12 (blk -> LBracket RBracket .)
    Else            reduce using rule 12 (blk -> LBracket RBracket .)


state 41

    (13) stmts -> stmt .
    (14) stmts -> stmt . stmts
    (13) stmts -> . stmt
    (14) stmts -> . stmt stmts
    (15) stmt -> . blk
    (16) stmt -> . Return Semicolon
    (17) stmt -> . Return exp Semicolon
    (18) stmt -> . vdecl Equal exp Semicolon
    (19) stmt -> . exp Semicolon
    (20) stmt -> . While LParen exp RParen stmt
    (21) stmt -> . If LParen exp RParen stmt
    (22) stmt -> . If LParen exp RParen stmt Else stmt
    (23) stmt -> . Print exp Semicolon
    (24) stmt -> . Array LSquare lit RSquare PLUS lit Semicolon
    (25) stmt -> . Array LSquare GLOBID RSquare PLUS lit Semicolon
    (26) stmt -> . Array LSquare lit RSquare Minus lit Semicolon
    (27) stmt -> . Array LSquare GLOBID RSquare Minus lit Semicolon
    (28) stmt -> . GLOBID Equal Vector Semicolon
    (11) blk -> . LBracket stmts RBracket
    (12) blk -> . LBracket RBracket
    (50) vdecl -> . TYPE GLOBID
    (34) exp -> . LParen exp RParen
    (35) exp -> . lit
    (36) exp -> . binop
    (37) exp -> . GLOBID
    (38) exp -> . GLOBID expWrapper
    (53) TYPE -> . int
    (54) TYPE -> . void
    (55) TYPE -> . ref TYPE
    (56) TYPE -> . noalias ref TYPE
    (41) binop -> . exp Multiply exp
    (42) binop -> . exp PLUS exp
    (43) binop -> . exp Divide exp
    (44) binop -> . exp Minus exp
    (45) binop -> . GLOBID Equal exp
    (46) binop -> . exp Equality exp
    (47) binop -> . exp Different exp
